fix blurrrrrrrrr

--- a/bar/eww.scss
+++ b/bar/eww.scss
@@ -26,9 +26,9 @@
   border-style: solid;
   margin: 5px 5px 5px 5px;
   padding: 0;
-  box-shadow: 0px 0px 3px 4px rgba($mauve, 0.6);
+  box-shadow: 0px 0px 3px 2px rgba($mauve, 0.6);
 
-  background-color: rgba($background, 0.6);
+  background-color: rgba($background, 0.61);
 }
 
 // Launcher
