--- a/bar/mocha.scss
+++ b/bar/mocha.scss
@@ -25,5 +25,5 @@ $base: #1e1e2e;
 $mantle: #181825;
 $crust: #11111b;
 // Variable Color's
-$background: rgba($base, 0.8);
+$background: $base;
 $foreground: $mauve;
